--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -8,5 +8,5 @@ RUN mkdir /app
 WORKDIR /app
 COPY build/libs/config-server.jar /app
 VOLUME /app/config
-ENTRYPOINT ["dockerize", "-timeout", "5m", "-wait", "tcp://eureka-server:8761", "-wait", "tcp://rabbitmq:5672", "java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/config-server.jar", "--spring.profiles.active=native,docker"]
+ENTRYPOINT ["dockerize", "-timeout", "5m", "-wait", "tcp://eureka-server:8761", "-wait", "tcp://rabbitmq:5672", "java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app/config-server.jar", "--spring.profiles.active=docker"]
 EXPOSE 8100
