--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -34,6 +34,8 @@ spring:
       server:
         native:
           search-locations: file:/app/config
+        git:
+          uri: file:/app/config
 
 server:
   port: 8100
