--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -7,21 +7,22 @@ spring:
   application:
     name: config-server
   rabbitmq:
-    host: localhost
+    host: rabbitmq
   cloud:
     config:
       server:
         native:
-          search-locations: classpath:/
+          search-locations: file:/app/config
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: config-server
+    prefer-ip-address: true
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+            defaultZone: http://eureka-server:8761/eureka/
 ---
 spring:
   profiles: docker
@@ -34,8 +35,6 @@ spring:
       server:
         native:
           search-locations: file:/app/config
-        git:
-          uri: file:/app/config
 
 server:
   port: 8100
