--- a/service-a/build.gradle
+++ b/service-a/build.gradle
@@ -11,5 +11,6 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
     compile('org.springframework.cloud:spring-cloud-starter-zipkin')
     compile('io.springfox:springfox-swagger2:2.6.1')
+    compile('io.springfox:springfox-swagger-ui:2.6.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
