--- a/service-b/build.gradle
+++ b/service-b/build.gradle
@@ -8,5 +8,6 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.cloud:spring-cloud-starter-bus-amqp')
     compile('io.springfox:springfox-swagger2:2.6.1')
+    compile('io.springfox:springfox-swagger-ui:2.6.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
