upgrade spring cloud and other components version

--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ buildscript {
         mavenCentral()
     }
     ext {
-        springBootVersion = '1.4.2.RELEASE'
-        springCloudVersion = 'Camden.SR3'
+        springBootVersion = '1.5.9.RELEASE'
+        springCloudVersion = 'Edgware.SR2'
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
