--- a/service-a/src/main/resources/bootstrap.yml
+++ b/service-a/src/main/resources/bootstrap.yml
@@ -63,7 +63,7 @@ server:
 
 eureka:
   instance:
-    hostname: config-server
+    hostname: service-a
     prefer-ip-address: true
   client:
     registerWithEureka: true
