--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         mavenCentral()
     }
     ext {
-        springBootVersion = '1.5.9.RELEASE'
+        springBootVersion = '1.5.10.RELEASE'
         springCloudVersion = 'Edgware.SR2'
     }
     dependencies {
@@ -24,7 +24,8 @@ repositories {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
-    apply plugin: 'org.springframework.boot'
+    //apply plugin: 'org.springframework.boot'
+    apply plugin: 'spring-boot'  
 
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
@@ -42,6 +43,10 @@ subprojects {
             imports {
                 mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
             }
+        }
+        dependencies {
+            compile ':spring-cloud-starter-config'
+            compile ':spring-cloud-starter-eureka'
         }
     }
 }
