--- a/service-b/src/main/resources/bootstrap.yml
+++ b/service-b/src/main/resources/bootstrap.yml
@@ -42,6 +42,7 @@ spring:
   sleuth:
     sampler:
       percentage: 1
+    traceId128: true
   zipkin:
     base-url: http://zipkin:9411/
   cloud:
