--- a/zuul/src/main/resources/bootstrap.yml
+++ b/zuul/src/main/resources/bootstrap.yml
@@ -19,7 +19,7 @@ eureka:
 
 # Disable Hystrix timeout globally (for all services)
 #hystrix.command.default.execution.timeout.enabled: false
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
 #hystrix.command.service-a.execution.timeout.enabled: false
 
 # Disable Hystrix timeout for a single service
@@ -65,7 +65,7 @@ eureka:
     serviceUrl:
             defaultZone: http://eureka-server:8761/eureka/
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
 
 zuul:
   routes:
