--- a/zuul/build.gradle
+++ b/zuul/build.gradle
@@ -3,5 +3,6 @@ dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-zuul')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.cloud:spring-cloud-starter-zipkin')
+    compile('org.springframework.cloud:spring-cloud-starter-sleuth')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
